--- a/study tracker copy/style.css
+++ b/study tracker copy/style.css
@@ -180,8 +180,8 @@ circle {
   background: #334155;
 }
 
-.fade-up { animation: fadeUp 0.4s forwards; }
-@keyframes fadeUp {
-  from { opacity: 1; transform: translateY(0); }
-  to { opacity: 0; transform: translateY(-10px); }
+
+@keyframes fadeInUp {
+  from { opacity: 1; transform: translateY(20px);}
+  to { opacity: 0; transform: translateY(0);}
 }
